<resources>
    <string name="app_name">Hello Celo</string>
    <string name="hello_celo_newline">Hello\nCelo</string>
    <string name="generate_a_new_seed_phrase">Generate a new Seed Phrase</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="profile_titlecase">Profile</string>
    <string name="add_titlecase">Add</string>
    <string name="setup_profile_titlecase">Setup Profile</string>
    <string name="username_explainer">This is the username other\'s will see. Max 32 characters.</string>
    <string name="username_titlecase">Username</string>
    <string name="profile_setup_titlecase">Profile Setup</string>
    <string name="updating_ellipse">Updating…</string>
    <string name="success_titlecase">Success</string>
    <string name="claimed_username_template">Claimed username \"%s\"</string>
    <string name="username_too_short_message">Username must be at least 6 characters long.</string>
    <string name="username_too_long_message">Username must be less than 32 characters.</string>
    <string name="what_do_you_want_to_say">What do you want to say?</string>
    <string name="posting_ellipse">Posting…</string>
    <string name="post_successfully_sent">Post successfully sent.</string>
    <string name="post_titlecase">Post</string>
    <string name="no_camera_error">Could not find a camera app installed.</string>
    <string name="add_photo_titlecase">Add Photo</string>
    <string name="post_error">There was an error saving your post.</string>
    <string name="loading_ellipse">Loading…</string>
    <string name="friends_titlecase">Friends</string>
    <string name="add_friend_explainer">What\'s your friends user name?</string>
    <string name="friends_username_titlecase">Friend\'s Username</string>
    <string name="here_s_some_suggestions">Here\'s some suggestions for people you might like to add as friends:</string>
    <string name="error_adding_friend">Sorry, could not find a user with that user name.</string>
    <string name="friend_added">%s added to friends list.</string>
    <string name="add_friend_titlecase">Add Friend</string>
    <string name="remove_friend_titlecase">Remove Friend</string>
    <string name="remove_friend_confirm_message_template">Are you sure you want to remove %s from your list of friends?</string>
    <string name="cancel_titlecase">Cancel</string>
    <string name="confirm_titlecase">Confirm</string>
    <string name="error_claiming_username">There was an error claiming that username.</string>
    <string name="edit_profile_titlecase">Edit Profile</string>
    <string name="error_updating_profile">Error updating profile.</string>
    <string name="profile_updated">Profile updated.</string>
    <string name="see_my_posts"><![CDATA[See my posts >]]></string>
</resources>